--- a/cloud-experience.html
+++ b/cloud-experience.html
@@ -1883,10 +1883,10 @@
             $('#backToMain').click(function () {
                 if (drawCount > 0) {
                     if (confirm('当前作品未完成，确定要返回主页面吗？')) {
-                        window.location.href = 'Default.aspx';
+                        window.location.href = 'index.html';
                     }
                 } else {
-                    window.location.href = 'Default.aspx';
+                    window.location.href = 'index.html';
                 }
             });
 
