--- a/miaoxiu-quiz.html
+++ b/miaoxiu-quiz.html
@@ -2407,7 +2407,7 @@
 
             // 返回首页按钮
             $('#backHomeBtn, #backBtn').click(function () {
-                window.location.href = 'Default.aspx';
+                window.location.href = 'index.html';
             });
 
             // 再来一次按钮
