--- a/process.html
+++ b/process.html
@@ -774,7 +774,7 @@
                 if (window.history.length > 1) {
                     window.history.back();
                 } else {
-                    window.location.href = "Default.aspx";
+                    window.location.href = "index.html";
                 }
             });
 
