--- a/pattern.html
+++ b/pattern.html
@@ -220,7 +220,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">缠枝莲纹</h3>
                     <p class="pattern-scene">常见场景：婚嫁服饰、被褥、门帘</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>以连绵不断的莲枝、莲花为主体，莲花象征纯洁，缠枝寓意“生生不息、连绵不绝”，整体图案表达对婚姻美满、家庭和睦、子孙绵延的美好期盼，是苗族婚嫁仪式中的核心吉祥图案。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>以连绵不断的莲枝、莲花为主体，莲花象征纯洁，缠枝寓意"生生不息、连绵不绝"，整体图案表达对婚姻美满、家庭和睦、子孙绵延的美好期盼，是苗族婚嫁仪式中的核心吉祥图案。</p>
                     <p class="pattern-geo">地理关联：广泛分布在贵州中部、四川南部苗族聚居区，受汉族传统文化影响较深，图案中莲花的造型融合了汉苗艺术特色，是文化交融的见证。</p>
                     <button class="pattern-btn locate-btn" data-lat="26.59" data-lng="106.66" data-name="缠枝莲纹融合区">
                         在地图中查看起源地
@@ -235,8 +235,8 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">龙凤呈祥纹</h3>
                     <p class="pattern-scene">常见场景：盛装披风、婚庆帐幔、寿衣</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>苗族龙凤呈祥纹以龙、凤与花卉、云纹组合，龙象征守护，凤象征祥瑞，二者呼应寓意“阴阳和谐、福禄双全”，既用于婚嫁场景祝福新人，也用于寿衣装饰祈求福寿绵长，是苗族最具代表性的吉祥图案之一。</p>
-                    <p class="pattern-geo">地理关联：主要分布在湖南邵阳、广西融水等湘桂交界苗族区，当地苗族与汉族、壮族长期杂居，图案在保留苗族造型特色的同时，吸收了汉族“龙凤呈祥”的文化内涵。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>苗族龙凤呈祥纹以龙、凤与花卉、云纹组合，龙象征守护，凤象征祥瑞，二者呼应寓意"阴阳和谐、福禄双全"，既用于婚嫁场景祝福新人，也用于寿衣装饰祈求福寿绵长，是苗族最具代表性的吉祥图案之一。</p>
+                    <p class="pattern-geo">地理关联：主要分布在湖南邵阳、广西融水等湘桂交界苗族区，当地苗族与汉族、壮族长期杂居，图案在保留苗族造型特色的同时，吸收了汉族"龙凤呈祥"的文化内涵。</p>
                     <button class="pattern-btn locate-btn" data-lat="27.24" data-lng="110.56" data-name="龙凤呈祥纹文化区">
                         在地图中查看起源地
                     </button>
@@ -250,8 +250,8 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">百祥如意纹</h3>
                     <p class="pattern-scene">常见场景：儿童虎头帽、老人衣领、荷包</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>融合蝙蝠（福）、如意、石榴（多子）、桂花（贵）等多种吉祥元素，以几何纹样串联成整体，寓意“集百福、纳千祥、事事如意”，常用于老人和儿童服饰，传递对长辈健康、晚辈聪慧的双重祝福。</p>
-                    <p class="pattern-geo">地理关联：集中分布在云南红河、文山等滇南苗族区，当地民族文化多元，图案中融入了彝族、哈尼族的吉祥符号，形成独特的“百祥”组合风格。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>融合蝙蝠（福）、如意、石榴（多子）、桂花（贵）等多种吉祥元素，以几何纹样串联成整体，寓意"集百福、纳千祥、事事如意"，常用于老人和儿童服饰，传递对长辈健康、晚辈聪慧的双重祝福。</p>
+                    <p class="pattern-geo">地理关联：集中分布在云南红河、文山等滇南苗族区，当地民族文化多元，图案中融入了彝族、哈尼族的吉祥符号，形成独特的"百祥"组合风格。</p>
                     <button class="pattern-btn locate-btn" data-lat="23.36" data-lng="103.43" data-name="百祥如意纹发源地">
                         在地图中查看起源地
                     </button>
@@ -281,7 +281,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">苗绣龙纹</h3>
                     <p class="pattern-scene">常见场景：盛装衣襟、头巾、背扇边缘</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>苗族龙纹不同于汉族龙的威严，多以“鱼龙”“蛇龙”“水牛龙”等形式出现，龙身常由鱼、蛙、蛇等元素组成，象征对雨水的祈求与对自然的敬畏，是农耕文化的重要体现。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>苗族龙纹不同于汉族龙的威严，多以"鱼龙""蛇龙""水牛龙"等形式出现，龙身常由鱼、蛙、蛇等元素组成，象征对雨水的祈求与对自然的敬畏，是农耕文化的重要体现。</p>
                     <p class="pattern-geo">地理关联：广泛分布在贵州、湖南、云南苗族聚居区，其中贵州台江的龙纹最具特色，图案中融入梯田、鱼、蛙等元素，体现山区水乡的地理特征。</p>
                     <button class="pattern-btn locate-btn" data-lat="26.67" data-lng="108.37" data-name="苗绣龙纹核心区">
                         在地图中查看起源地
@@ -312,7 +312,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">迁徙路线纹</h3>
                     <p class="pattern-scene">常见场景：盛装背扇、衣襟、头巾</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>以连续的几何折线、山脉、河流图案，模拟苗族迁徙途中的地理环境，记录族群从黄河流域迁徙至西南山区的历史，是苗族“无文字民族”传承历史的重要方式。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>以连续的几何折线、山脉、河流图案，模拟苗族迁徙途中的地理环境，记录族群从黄河流域迁徙至西南山区的历史，是苗族"无文字民族"传承历史的重要方式。</p>
                     <p class="pattern-geo">地理关联：主要分布在贵州黔西北、云南文山等苗族迁徙重要节点地区，图案复杂度与迁徙路线长度相关，路线越远图案越繁复。</p>
                     <button class="pattern-btn locate-btn" data-lat="27.01" data-lng="105.78" data-name="迁徙路线纹发源地">
                         在地图中查看起源地
@@ -327,7 +327,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">祖先灵位纹</h3>
                     <p class="pattern-scene">常见场景：祭祀服饰、神龛挂饰、长老披风</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>以抽象的牌位造型为核心，搭配云纹、火焰纹，象征对祖先的敬仰与缅怀。苗族认为祖先灵魂会护佑族群平安，图案常用于祭祀仪式相关服饰，是连接现世与先祖的精神纽带，体现“敬天法祖”的传统理念。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>以抽象的牌位造型为核心，搭配云纹、火焰纹，象征对祖先的敬仰与缅怀。苗族认为祖先灵魂会护佑族群平安，图案常用于祭祀仪式相关服饰，是连接现世与先祖的精神纽带，体现"敬天法祖"的传统理念。</p>
                     <p class="pattern-geo">地理关联：主要分布在贵州黔西南、云南曲靖苗族聚居区，当地保留了完整的祖先祭祀礼仪，图案造型与传统灵位形制高度一致，是祭祀文化的视觉延伸。</p>
                     <button class="pattern-btn locate-btn" data-lat="25.09" data-lng="104.92" data-name="祖先灵位纹文化核心区">
                         在地图中查看起源地
@@ -342,7 +342,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">古城遗址纹</h3>
                     <p class="pattern-scene">常见场景：盛装衣襟、头巾、丧葬寿衣</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>以几何线条勾勒古代城郭、寨门、烽火台的轮廓，记录苗族祖先曾经居住的古城遗址，传递“不忘故土”的族群记忆。图案中城郭与道路相连，象征族群虽迁徙但根脉永续，是对故土家园的集体怀念。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>以几何线条勾勒古代城郭、寨门、烽火台的轮廓，记录苗族祖先曾经居住的古城遗址，传递"不忘故土"的族群记忆。图案中城郭与道路相连，象征族群虽迁徙但根脉永续，是对故土家园的集体怀念。</p>
                     <p class="pattern-geo">地理关联：集中分布在湖南张家界、重庆秀山等湘西北苗族区，当地流传着祖先在武陵山区筑城而居的传说，图案细节与考古发现的古代苗寨遗址布局相契合。</p>
                     <button class="pattern-btn locate-btn" data-lat="29.11" data-lng="110.48" data-name="古城遗址纹发源地">
                         在地图中查看起源地
@@ -358,7 +358,7 @@
                 <div class="pattern-info">
                     <h3 class="pattern-name">梯田农耕纹</h3>
                     <p class="pattern-scene">常见场景：成人盛装、腰带、桌布</p>
-                    <p class="pattern-desc"><strong>文化释义：</strong>以层叠的几何图形模拟苗族聚居区的梯田景观，搭配农耕人物、耕牛、禾苗等元素，再现“春种秋收”的农耕生活，体现苗族对土地的依赖与感恩，是山区农耕文明的视觉记录。</p>
+                    <p class="pattern-desc"><strong>文化释义：</strong>以层叠的几何图形模拟苗族聚居区的梯田景观，搭配农耕人物、耕牛、禾苗等元素，再现"春种秋收"的农耕生活，体现苗族对土地的依赖与感恩，是山区农耕文明的视觉记录。</p>
                     <p class="pattern-geo">地理关联：集中分布在贵州黔东南雷公山周边，当地梯田密集、农耕历史悠久，图案中的梯田层级与实际地理景观高度吻合，是地域生活的真实写照。</p>
                     <button class="pattern-btn locate-btn" data-lat="26.38" data-lng="108.12" data-name="梯田农耕纹核心区">
                         在地图中查看起源地
